intro with level3 headings

--- a/ms/invasibility-ms.Rmd
+++ b/ms/invasibility-ms.Rmd
@@ -80,20 +80,12 @@ alien species, conifer, ecosystem type, establishment, exposure, forestry, invas
 
 # Introduction
 
-```{r include = FALSE}
-# Structure [@barlowAchievingCommunicatingGlobally2016]
-# 1. why the topic is important in the broadest sense, which for an applied study should highlight the societal importance
-# 2. the state of the science, including the narrower subject, region, community and species-specific context
-# 3. the key knowledge gaps and why they matter
-# 4. an outline of how this paper will meet the knowledge gaps, why this is novel, and the aims and hypotheses it will test.
-```
-
 ## Part 1: why the topic is important in the broadest sense, which for an applied study should highlight the societal importance
 
 ### Alien conifer plantations are a big deal
 While there is a long history of using alien conifers in forestry, the practice of planting conifers at scale in places where they are not native is hardly a thing of the past.
 Commercial forestry relies on alien conifer species in many parts of the world, with 44 % of plantation forests globally composed mainly of introduced species [@faoGlobalForestResources2020].
-Alien conifer species may also be included in some of the many large afforestation programs proposed to mitigate climate change [@brightEvaluatingTerrestrialCarbon2020, @teururakaunewzealandforestserviceOneBillionTrees2018].
+Alien conifer species may also be included in some of the vast afforestation programs against climate change [@brightEvaluatingTerrestrialCarbon2020, @teururakaunewzealandforestserviceOneBillionTrees2018].
 Therefore, it is likely that alien conifers will continue to be planted across large areas in coming decades, sometimes in regions where a given species has not previously occurred.
 
 ### We want to prevent initial spread from plantations
@@ -105,7 +97,7 @@ Combined with the expectation of future planting, the potential for invasions un
 ## Part 2: the state of the science, including the narrower subject, region, community and species-specific context
 
 ### Establishment and growth --- one part of the process that give rise to wildlings --- depends on local conditions. 
-Wildlings appear via a process that starts with seed production in the plantation, then seed dispersal, followed by seedling establishment and growth.
+Wildlings come about via a process that starts with seed production in the plantation, then seed dispersal, followed by seedling establishment and growth.
 If we focus on seedling establishment and growth, the rate at which wildlings accumulate in a given location depends on biotic and abiotic conditions there.
 Factors like seed bed characteristics, soil moisture, and light availability are likely among the most important determinants of establishment and early growth success — as they are for natural regeneration of conifers [@burnsSilvicsNorthAmerica1990].
 Silviculturalists have long used natural vegetation composition to forecast the regeneration success of particular conifer species in particular locations [@savillPlantationSilvicultureEurope1997], which supports the expectations that: 1) vegetation integrates influences on wildling establishment and growth, and 2) different conifer species have different optima for establishment and growth. 
@@ -119,7 +111,7 @@ Thus, we distinguish between a location's *susceptibility* (intrinsic favorabili
 The same distinction exists between *invasibility* and *level of invasion*, but these terms refer to invader richness rather than invader abundance [@richardsonPlantInvasionsMerging2006].
 By our definitions, vulnerability is the level of risk realized at a specific location, while susceptibility is the level of risk that may be attributed to the conditions at that location.
 Susceptibility is what we can characterize for an ecosystem type and expect to remain constant across spatial contexts.
-For example, at locations where the nearest seed source is unknown, we may assess the relative risk of wildlings based on ecosystem susceptibilities.
+For example, at locations where the nearest seed source is unknown, we may assess the relative risk of wildlings based on ecosystem susceptibility.
 
 ### Wildling abundance varies in Norway but is related to ecosystem types
 
@@ -134,51 +126,37 @@ These policies aim to prevent wildlings from further deteriorating red-listed ec
 ## Part 3: the key knowledge gaps and why they matter
 
 ### Ecosystem susceptibility in Norway (the estimate)
-Determining ecosystem susceptibility, so that interventions can be prioritized objectively, is among the most urgent objectives for invasion science [@pysekScientistsWarningInvasive2020].
+Determining ecosystem susceptibility, so that interventions can be prioritized objectively and with maximum effect, is among the most urgent objectives for invasion science [@pysekScientistsWarningInvasive2020].
 To mitigate the negative impacts of alien conifer plantations, we need to know which ecosystems are most susceptible to wildlings [@bindewaldSiteSpecificRisk2021; @potzelsbergerGrowingNonnativeTrees2020].
 In the Norwegian context specifically, public authorities need a basis for judging where to allow new alien conifer plantations, and land managers need a basis for efficient monitoring and control.
 However, ecosystem susceptibility to alien conifers is not easily generalized [@higginsPineInvasionsSouthern1998] — not across ecosystems nor across species.
 Therefore, we must quantify ecosystem susceptibility in a granular way, by asking: *how likely is establishment and growth of a particular species, in a particular ecosystem type?*
-It is these values of ecosystem susceptibility that can be expected to remain constant as seed sources change and species spread, thereby providing a basis for long-term management of alien conifers. 
+These values of ecosystem susceptibility provide a basis for long-term management of alien conifers, because they can be expected to remain constant as seed sources change and species spread. 
 
 ### How much susceptibility deviates from vulnerability (correlation between the two estimates)
 Another key knowledge gap is how much ecosystem vulnerability deviates from ecosystem susceptibility, as a result of differential exposure to seed rain.
-Experience from alien conifer invasions in several parts of the world shows that control interventions need to be focused on the early stages of invasion [@nunezEcologyManagementInvasive2017].
-Early stages may be associated with highly uneven exposure, because plantations expose only neighboring ecosystems to seed rain.
+We know that that interventions against alien conifer invasions need to focus on early stages of invasion [@nunezEcologyManagementInvasive2017], but these early stages probably produce highly uneven exposure to seed rain, concentrated in ecosystems that border plantations.
 Therefore, we want to know whether or not initial vulnerability — i.e., first-generation wildling abundance per ecosystem — provides a good approximation of ecosystem susceptibility.
 A good approximation would suggest that it is generally safe to estimate long-term ecosystem susceptibility directly from surveys of plantation surroundings.
-Conversely, a poor approximation would highlight the importance of differentiating between vulnerability and susceptibility — in Norway and elsewhere — to avoid highly susceptible ecosystems being overlooked.
+Conversely, a poor approximation would highlight the importance of differentiating between vulnerability and susceptibility — in Norway and elsewhere— to avoid highly susceptible ecosystems being overlooked.
 
 ## Part 4: an outline of how this paper will meet the knowledge gaps, why this is novel, and the aims and hypotheses it will test.
 
 ### How this paper will meet the knowledge gaps
-1. Detailed surveys of the spatial distributions of wildlings as well as ecosystem types
-2. Mechanistic reconstruction of spatial distribution of seed rain.
-3. Causally-informed statistical models of wildling abundance as a function of ecosystem type.
+This paper addresses the two knowledge gaps described above (ecosystem susceptibility, correspondence between susceptibility and vulnerability), for three groups of common alien conifers in Norway.
+Four aspects of our methodology deserve highlighting.
+First, we fully map the wildlings and ecosystem types around a given plantation, rather than sampling these. 
+The detailed mapping allows a fine-scaled, spatially-explicit assessment of the relationship between wildlings and ecosystems.
+Second, our delineation of ecosystems follows a typology that is nationally-adopted for land management in Norway.
+Our estimates of susceptibility are therefore directly applicable without additional uncertainty from imperfect correspondence between ecosystem types.
+Third, we estimate exposure by reconstructing the spatial distribution of seed rain from plantations, testing both mechanistic and phenomenological models of seed dispersal. 
+Seeds from plantation conifers are generally dispersed by wind alone, and wind-vectored seed dispersal can be estimated with relative confidence [@nathanDispersalKernels2012].
+Fourth, we specify our statistical model of the wildling–ecosystem relationship based on domain knowledge, with explicitly stated causal assumptions. This approach prioritizes understanding of ecological processes and promotes constructive discourse around alternative model specifications.
 
-This paper will address the two knowledge gaps described above (ecosystem susceptibility, correlation between susceptibility and vulnerability), for three conifer species groups in Norway.
-Crucial to our approach are the following three points.
-First, we harness detailed surveys of wildlings and ecosystem types around plantations, such that these can be coupled in a spatially explicit manner.
-Second, we map exposure by reconstructing the spatial distribution of seed rain from plantations, using mechanistic and phenomenological models in parallel. 
-Third, we prioritize a causally-informed model specification of wildling abundance as a function of ecosystem type.
+In summary, we examine plantations of alien conifers in Norway to investigate the following questions:
 
-### Wind dispersal makes early exposure tractable
-Plantation conifers generally have wind-vectored seed dispersal, which can be estimated with relative confidence [@nathanDispersalKernels2012].
-Studying ecosystem invasibility is tractable with plantations of alien conifers because their seeds are wind-dispersed, so we can estimate ecosystem exposure to seed rain from plantations with some confidence [@catfordQuantifyingLevelsBiological2012].
-
-### Establishment across management units
-Using a standardized (national or international) ecosystem classification system makes it easy for managers to transfer findings about ecosystem susceptibility directly to management decisions.
-In Norway, the national land mapping classification system sorts variation in local ecological conditions [@halvorsenSystematicsEcodiversityEcoSyst2020].
-It aims for reproducible and value-neutral classification of ecosystems by rule-based discretization of species turnover along important environmental gradients [@halvorsenSystematicsEcodiversityEcoSyst2020].
-As a result, its ecosystem types (hereafter: "ecosystems") encapsulate much of the variation likely to regulate wildling establishment --- in competition, nutrient availability, disturbance, etc. [@richardsonNaturalizationIntroducedPlants2012].
-Furthermore, the system's full areal coverage means that we can investigate susceptibility across all types of land cover, many of which have unknown regeneration potential because they are not generally considered by silviculturalists (e.g. agriculturally improved grassland).
-
-
-We examine plantations of alien conifers in Norway to investigate the following questions:
-
-- Which Norwegian ecosystems are most and least susceptible to wildlings of common alien conifer species?
-- How much do ecosystems vary in their susceptibility to wildling establishment and growth?
-- Are differences in susceptibility among ecosystems masked by differences in exposure to seed rain?
+- Which ecosystems are most and least susceptible to wildlings of various alien conifer species, and by how much do they differ in their susceptibility?
+- Are differences in susceptibility among ecosystems masked in the realized distribution of wildlings, by differences in exposure to seed rain?
 
 # Materials and methods
 
@@ -198,6 +176,15 @@ Within a 2x2 km plot centered on the stand of interest, we mapped all conspecifi
 Within the central 500x500 m of that plot, we mapped wildlings and ecosystems.
 We used GPS to register the point-positions of all wildlings over 30 cm in height, recording a single position for groups of wildlings occurring with less than 5 m between them.
 A few exceptionally dense groups of wildlings were mapped by registering polygons instead of points and estimating the number of individuals by transect counts.
+
+```{r include = FALSE}
+# Using a standardized (national or international) ecosystem classification system makes it easy for managers to transfer findings about ecosystem susceptibility directly to management decisions.
+# In Norway, the national land mapping classification system sorts variation in local ecological conditions [@halvorsenSystematicsEcodiversityEcoSyst2020].
+# It aims for reproducible and value-neutral classification of ecosystems by rule-based discretization of species turnover along important environmental gradients [@halvorsenSystematicsEcodiversityEcoSyst2020].
+# As a result, its ecosystem types (hereafter: "ecosystems") encapsulate much of the variation likely to regulate wildling establishment --- in competition, nutrient availability, disturbance, etc. [@richardsonNaturalizationIntroducedPlants2012].
+# Furthermore, the system's full areal coverage means that we can investigate susceptibility across all types of land cover, many of which have unknown regeneration potential because they are not generally considered by silviculturalists (e.g. agriculturally improved grassland).
+```
+
 Concurrently, we registered polygons for all terrestrial and wetland ecosystems, following the Nature in Norway classification system [version 2.0 or 2.1, @halvorsenNaturNorgeNiN2015; based on the principles summarized in Halvorsen et al., @halvorsenSystematicsEcodiversityEcoSyst2020].
 This system is the national standard for land cover mapping and provides full spatial coverage (i.e. any location is assignable to an ecosystem).
 We mapped ecosystems at a scale of 1:5000, which means that any polygon over 250 m^2^ was registered [@brynVeilederKartleggingAv2015].
