P.contorta removed from ms (but not yet from all outputs like RDs, tables, figures) dispersion comparison between density and susceptibility removed

--- a/reports/locality-WALD.Rmd
+++ b/reports/locality-WALD.Rmd
@@ -16,8 +16,8 @@ library(tidyverse)
 library(here)
 library(sf)
 library(units)
-source(here("R","locality-functions.R"))
-source(here("R","dispersal-functions.R"))
+source(here("R","functions.R"))
+source(here("R","functions-dispersal.R"))
 source(here("R","SkarpaasShea_2007.R"))
 ```
 
@@ -26,7 +26,6 @@ traits <- tribble(
   ~species, ~terminal.velocity, ~dispersal.season,
   "Larix", 1.0, c(12,1:5), # After Sandvik 2012 (for L. decidua), and Sullivan 1994 (for L. decidua)
   "P.abies", 0.58, c(11:12,1:5), # After Sandvik 2012 (but see Kaliniewicz et al. 2018), and Sullivan 1994
-  "P.contorta", 0.82, c(9:12), # After Sandvik 2012
   "P.sitchensis-lutzii", 0.94, c(10:12,1:2) # After Sandvik 2012 (but see Kaliniewicz et al. 2018), and Harris 1990
 )
 ```
