--- a/ms/invasibility-ms.Rmd
+++ b/ms/invasibility-ms.Rmd
@@ -144,13 +144,13 @@ In summary, we examine plantations of alien conifers in Norway to investigate th
 
 ## Field data
 
-We registered wildlings and ecosystems around 82 reproductive plantation stands across Norway, comprising four groups of alien conifers (hereafter: "species"; fig. \@ref(fig:sites-map)).
+We registered wildlings and ecosystems around 76 reproductive plantation stands across Norway, comprising three groups of alien conifers (hereafter: "species"; fig. \@ref(fig:sites-map)).
 The sample contained (1) forty-two sites with Sitka spruce (*Picea sitchensis*) or its fertile hybrid, Lutz spruce (*P.* $\times$ *lutzii*), (2) nineteen with Norway spruce (*Picea abies*), and (3) fifteen with larch species (*Larix* spp.).
 Note that Norway spruce is native to Norway, but the plantations included in this study were located in parts of the country where its natural distribution is highly restricted.
 We selected stands using aerial imagery, aiming for those isolated from conspecific stands.
 We collected field data for each stand in one of six field campaigns during the period 2016-2019 [reported in @olsenKartleggingAvKortdistansespredning2016; @appelgrenKartleggingAvKortdistansespredning2017; @kyrkjeeideKartleggingAvKortdistansespredning2017; @appelgrenKartleggingAvKortdistansespredning2018; @olsenKartleggingAvKortdistansespredning2019; @sandvenKartleggingAvKortdistansespredning2019].
 
-```{r sites-map, out.width='100%', fig.cap='Locations of the 82 plantation stands in the sample.'}
+```{r sites-map, out.width='100%', fig.cap='Locations of the 76 plantation stands in the sample.'}
 knitr::include_graphics('figures/sites-map.pdf')
 ```
 
@@ -172,9 +172,9 @@ This system is the national standard for land cover mapping and provides full sp
 We mapped ecosystems at a scale of 1:5000, which means that any polygon over 250 m^2^ was registered [@brynVeilederKartleggingAv2015].
 Regularly patterned occurrence of more than one ecosystem in polygons smaller than the minimum size were registered as so-called mosaic polygons.
 
-We estimated or measured (by clinometer) the heights of the 82 central stands.
+We estimated or measured (by clinometer) the heights of the 76 central stands.
 We also estimated their ages at the time of the field campaign, either by contacting land owners and municipal officials, or by counting growth rings.
-Details of all 82 stands are provided in the Appendix (table \@ref(tab:sites-table)).
+Details of all 76 stands are provided in the Appendix (table \@ref(tab:sites-table)).
 
 ## Seed rain estimates
 
@@ -184,7 +184,7 @@ Acknowledging the uncertainty involved in estimating seed dispersal, we explored
 
 The first model was a static seed dispersal kernel with parameter estimates generalized from multiple data sets.
 Specifically, we selected from Bullock et al. [-@bullockSynthesisEmpiricalPlant2017] the kernel that performed best for wind-adapted seeds from 5-15 m tall trees (an Exponential Power function).
-Seventy-two of the 82 stands in our data set matched this height range better than a taller range with a different empirical kernel.
+Sixty-six of the 76 stands in our data set matched this height range better than a taller range with a different empirical kernel.
 
 The second model was an anisotropic implementation of the Wald Analytical Long-distance Dispersal model [WALD, @katulMechanisticAnalyticalModels2005], following Skarpaas & Shea [-@skarpaasDispersalPatternsDispersal2007].
 We parameterized the model with: site- and season-specific wind vectors retrieved from meteorological data sets [MET Norway; @reistadHighresolutionHindcastWind2011; @haakenstad15yearHighResolution2017], wind turbulence estimated from local ecosystem composition, seed release height based on stand height, and species-specific seed terminal velocities from literature.
@@ -210,7 +210,7 @@ The resulting data set was used to calculate wildling densities (abundance/area)
 For the density calculation, wildling abundance was tallied in proportion to the ecosystem composition of its grid cell. 
 For example, a cell occupied by three wildlings and half-covered by a given ecosystem would tally 1.5 wildlings for that ecosystem.
 
-```{r site-example, out.width='90%', fig.cap='An illustration of one of the 82 plantations: Meaasen. The background map shows the surroundings of the plantation, and the 500x500 m plot is overlaid with an aerial photograph. The middle row of panels shows data as registered in the field. The top and bottom rows of panels show selected variables for the 500x500 m plot, as used in the regression model (with a spatial grain of 10 m). Grid cells without data are either seed sources or "tree plantations" of other species.'}
+```{r site-example, out.width='90%', fig.cap='An illustration of one of the 76 plantations: Meaasen. The background map shows the surroundings of the plantation, and the 500x500 m plot is overlaid with an aerial photograph. The middle row of panels shows data as registered in the field. The top and bottom rows of panels show selected variables for the 500x500 m plot, as used in the regression model (with a spatial grain of 10 m). Grid cells without data are either seed sources or "tree plantations" of other species.'}
 knitr::include_graphics('figures/site-example/site-example.pdf')
 ```
 
@@ -236,7 +236,6 @@ To estimate the causal influence of ecosystems on wildling abundance in accordan
 We also included stand age in the count process model because it reduced the unexplained variance associated with the random effect of site, and because we could interpret its coefficient as an unconfounded total effect on wildling abundance [@westreichTableFallacyPresenting2013].
 Climate was represented as mean annual temperature (Bio1) and precipitation of the coldest quarter (Bio19), at 30 arcsecond resolution, from CHELSA data [@kargerClimatologiesHighResolution2017].
 We chose these variables because they showed the strongest correlations with Norwegian vegetation zones and sections, respectively [@bakkestuenSteplessModelsRegional2008].
-For lodgepole pine we excluded Bio1 because the two climatic variables were highly correlated ($\rho$ = 0.98).
 Elevation relative to the stand was taken with respect to the highest point of the central stand, from digital elevation models at 1 or 10 m resolution (Norwegian Mapping Authority).
 Relative seed rain directly represents relative exposure in the count process, so we entered the natural log of this variable as an offset term [coefficient fixed at 1; @zuurMixedEffectsModels2009].
 We expect, for example, that a doubling in seed rain would result in a doubling in wildling abundance, all else being equal.
@@ -261,7 +260,7 @@ For each species, wildling-free ecosystems were dropped as predictors (to avoid 
 The values of Bio1, Bio19, elevation relative to the stand, and stand age were standardized, and the natural log of relative seed rain was centered.
 We fitted three parallel models for each species: (1) with relative seed rain derived from the static dispersal kernel, (2) with relative seed rain derived from the WALD dispersal model, and (3) without relative seed rain.
 From these three we selected that with the best AIC. 
-Three models (Sitka/Lutz spruce and lodgepole pine with static dispersal kernel; larches without seed rain) did not converge and were excluded from selection.
+X models (Sitka/Lutz spruce with static dispersal kernel; larches without seed rain) did not converge and were excluded from selection.
 To catch problems with our model specification, we looked for deviation from uniformity in quantile-scaled, simulated residuals, using the DHARMa package [version 0.3.3, @hartigDHARMaResidualDiagnostics2020].
 We also ran DHARMa's tests for residual over/underdispersion and zero-inflation.
 Relative establishment likelihoods among ecosystems were calculated as predictions from the conditional count part of the model (holding covariates at their mean values).
@@ -271,10 +270,9 @@ We then refitted our selected models with these eight strata replacing ecosystem
 
 # Results
 
-Wildling densities across ecosystems ranged 0-211/ha for Sitka/Lutz spruce (unstratified mean: 28), 0-49/ha for Norway spruce (unstratified mean: 6), 0-1045/ha for larches (unstratified mean: 13), and 0-219/ha for lodgepole pine (unstratified mean: 34).
+Wildling densities across ecosystems ranged 0-211/ha for Sitka/Lutz spruce (unstratified mean: 28), 0-49/ha for Norway spruce (unstratified mean: 6), and 0-1045/ha for larches (unstratified mean: 13).
 Relative establishment likelihoods differed considerably from relative wildling densities, except in larches (table \@ref(tab:estimate-correlation-table)).
 For instance, our model estimated that Sitka/Lutz spruce is three times more likely to establish in "boreal heath" than in "artificial substrate", despite wildling density being three times lower in "boreal heath" (fig. \@ref(fig:establishment)).
-The variation in relative establishment likelihoods generally matched or exceeded that in corresponding wildling densities (Appendix table \@ref(tab:dispersion-table)).
 
 ```{r estimate-correlation-table}
 cortab <- read.csv(here('ms', 'tables', 'corr-between-estimates.csv'), check.names = FALSE)
@@ -285,8 +283,8 @@ kbl(cortab, booktabs = TRUE,
 ```
 
 For all species, models using relative seed rain estimates from the WALD dispersal model predicted wildling abundance best (Appendix, table \@ref(tab:model-comparison-table)).
-Site had a strong influence on wildling abundance for Sitka/Lutz spruce and lodgepole pine, such that site variation swamped much of the variation between ecosystems for these species.
-The direct effects of climate on establishment likelihood varied by species and was strongest for larches (Appendix, tables \@ref(tab:Ps)-\@ref(tab:Pc)). 
+Site had a strong influence on wildling abundance for Sitka/Lutz spruce, such that site variation swamped much of the variation between ecosystems for this species.
+The direct effects of climate on establishment likelihood varied by species and was strongest for larches (Appendix, tables \@ref(tab:Ps)-\@ref(tab:L)). 
 The direct effects of elevation relative to the stand on wildling abundance were comparatively modest and acted in different directions for different species.
 Stand age did not significantly affect wildling abundance in any species, except that older stands of Sitka/Lutz spruce had fewer wildling-free cells (structural zeros) than younger stands.
 
@@ -317,7 +315,7 @@ kbl(cortab, booktabs = TRUE,
 ```
 
 Variation in establishment likelihoods shrank when ecosystems were aggregated by category or structuring process, to 0--3 orders of magnitude (fig. \@ref(fig:establishment-hypotheses)).
-The model for lodgepole pine did not converge and was disregarded, but none of the remaining species showed large differences in establishment likelihood between terrestrial and wetland ecosystems.
+None of the species showed large differences in establishment likelihood between terrestrial and wetland ecosystems.
 At most, larches were three times less likely to establish in wetlands.
 Ecosystems structured by destabilizing disturbance tended to show high establishment likelihoods.
 However, the association between structuring process and establishment likelihood was heterogeneous across species.
@@ -370,11 +368,11 @@ The negligible effect of precipitation and weakly positive effect of mean annual
 For Norway spruce, our results support a previous finding that seedling recruitment increases towards the wetter end of Norwegian climate [@tingstadTemperaturePrecipitationBiotic2015], although most of our sites circumscribed a narrow part of that range.
 Warm and wet conditions seem to suppress larch establishment in Norway, which may be taken into consideration when managing these plantations. 
 
-A curious feature of our results that needs more research is the large amount of unexplained variation in Sitka/Lutz spruce and lodgepole pine wildling abundance between sites.
-This means that our ability to predict the spread of these species at a specific site, relative to others, is limited. 
+A curious feature of our results that needs more research is the large amount of unexplained variation in Sitka/Lutz spruce wildling abundance between sites.
+This means that our ability to predict the spread of this species at a specific site, relative to others, is limited. 
 Nevertheless, ecosystem comparisons can and should still guide management.
 Bianchi et al. [-@bianchiMethodsPredictingSitka2019] struggled to predict regeneration density within Sitka spruce plantations from stand density (among other predictors), which suggests that the unexplained site-level variation in our models was not caused by our assumption of constant seed source density.
-Alternative sources of heterogeneity may include: (1) disturbance legacies not captured in the delineation of ecosystem types [especially in grazing pressure; @millerHowDisturbanceHistory2021], (2) demographic characteristics of plantations, potentially related to provenance [especially in cone production; @taylorDriversPlantInvasion2016], (3) wildling control by property owners, or (4) ecological differences between Sitka and Lutz spruce or subspecies of lodgepole pine.
+Alternative sources of heterogeneity may include: (1) disturbance legacies not captured in the delineation of ecosystem types [especially in grazing pressure; @millerHowDisturbanceHistory2021], (2) demographic characteristics of plantations, potentially related to provenance [especially in cone production; @taylorDriversPlantInvasion2016], (3) wildling control by property owners, or (4) ecological differences between Sitka and Lutz spruce.
 
 ## Which ecosystems are susceptible?
 
@@ -382,9 +380,7 @@ In a large database of vegetation plots across Europe, Chytrý et al.[-@chytryHa
 The conifer species we examined do not conform closely to these broader trends in ecosystem invasibility, showing relatively high rates of establishment in heaths and very low rates of establishment in arable ecosystems.
 To the extent that there are similarities across these four species, they appear to establish more easily in ecosystems infrequently hit by intense disturbances (e.g. rock fall in "bare talus slope") than in ecosystems frequently experiencing less intense disturbances (e.g. flooding in "semi-natural wet meadow").
 
-Of the species in this study, lodgepole pine's establishment is best studied, and our results are consistent with this literature.
-"Bare rock" harbors very few competitors and showed highest lodgepole pine establishment of all ecosystems [@despainDispersalEcologyLodgepole2001], and ecosystems with canopy cover generally showed low establishment [@langdonPinusContortaInvasion2010; @taylorDriversPlantInvasion2016].
-It is difficult to evaluate our results against the recruitment patterns that have been described for the three other species.
+It is difficult to evaluate our results against the recruitment patterns that have been described for the three species.
 For instance, Sitka spruce grows poorly under moisture stress and tolerates flooding well [@petersonEcologyManagementSitka1997], which might account for why it was equally likely to establish in wetland and terrestrial ecosystems.
 Yet it also established well in "open shallow-soil ground", despite this ecosystem's characteristically dry soil. 
 This illustrates the trouble with deriving predictions from generalized statements about species autecology.
@@ -476,10 +472,9 @@ We used weather station data if the station was less than 2.5 or 10 km away (dep
 ```{r recreate traits-table, include=FALSE}
 traits <- tribble(
   ~`species group`, ~`seed terminal velocity`, ~`dispersal season`, ~references,
-  "Larix spp.", "1.0 m/s", "Dec - May", "2, 3",
-  "Picea abies", "0.58 m/s", "Nov - May", "2, 4",
-  "Pinus contorta", "0.82 m/s", "Sep - Dec", "2",
-  "Picea sitchensis / lutzii", "0.94 m/s", "Oct - Feb", "1, 2")
+  "Larix spp.", "1.0 m/s", "Dec - May", "2, 4",
+  "Picea abies", "0.58 m/s", "Nov - May", "3, 4",
+  "Picea sitchensis / lutzii", "0.94 m/s", "Oct - Feb", "1, 4")
 ```
 
 ```{r traits-table}
@@ -487,9 +482,9 @@ kable(traits, longtable = TRUE, booktabs = TRUE, escape = FALSE,
       caption = "Dispersal traits") %>% 
   column_spec(1, italic = TRUE) %>%
   footnote(general = c("1. Harris, A. S. Sitka spruce. in Silvics of North America: 1. Conifers (eds. Burns, R. M. & Honkala, B. H.) vol. 2 513–529 (U.S. Department of Agriculture, Forest Service, 1990).",
-                       "2. Sandvik, H. Kunnskapsstatus for spredning og effekter av fremmede bartrær på biologisk mangfold. (2012).",
-                       "3. Sullivan, J. Larix decidua. Fire Effects Information System, U.S. Department of Agriculture, Forest Service, Rocky Mountain Research Station,  Fire Sciences Laboratory https://www.fs.fed.us/database/feis/plants/tree/lardec/all.html (1994).",
-                       "4. Sullivan, J. Picea abies. Fire Effects Information System, U.S. Department of Agriculture, Forest Service, Rocky Mountain Research Station,  Fire Sciences Laboratory https://www.fs.fed.us/database/feis/plants/tree/picabi/all.html (1994)."), 
+                       "2. Sullivan, J. Larix decidua. Fire Effects Information System, U.S. Department of Agriculture, Forest Service, Rocky Mountain Research Station,  Fire Sciences Laboratory https://www.fs.fed.us/database/feis/plants/tree/lardec/all.html (1994).",
+                       "3. Sullivan, J. Picea abies. Fire Effects Information System, U.S. Department of Agriculture, Forest Service, Rocky Mountain Research Station,  Fire Sciences Laboratory https://www.fs.fed.us/database/feis/plants/tree/picabi/all.html (1994)."), 
+                       "4. Sandvik, H. Kunnskapsstatus for spredning og effekter av fremmede bartrær på biologisk mangfold. (2012).",
            general_title = "References: ",
            threeparttable = TRUE)
 ```
@@ -512,7 +507,6 @@ locs <- locs %>%
 # Formatting
 locs <- locs %>% 
   mutate(species = case_when(
-    species == "P.contorta" ~ "Pinus contorta",
     species == "P.sitchensis-lutzii" ~ "Picea sitchensis / lutzii",
     species == "P.abies" ~ "Picea abies",
     species == "Larix" ~ "Larix spp.")) %>% 
@@ -569,17 +563,6 @@ kbl(typestab, longtable = TRUE, booktabs = TRUE, escape = FALSE,
   landscape()
 ```
 
-```{r dispersion-table}
-disptab <- read.csv(here('ms', 'tables', 'dispersion.csv'), 
-                    row.names = 1, check.names = FALSE)
-kbl(disptab, longtable = TRUE, booktabs = TRUE, escape = FALSE,
-    caption = "Proportional variability in wildling densities among ecosystems compared to proportional variability in establishment likelihoods among ecosystems.") %>%
-  column_spec(1, italic = TRUE) %>%
-  footnote(general = c("Heath, Joel P., and Peter Borowski. 2013. “Quantifying Proportional Variability.” PLoS ONE 8 (12): e84074. https://doi.org/10.1371/journal.pone.0084074."), 
-           general_title = "References: ",
-           threeparttable = TRUE)
-```
-
 ```{r model-comparison-table}
 options(knitr.kable.NA = 'NA')
 mcomptab <- read.csv(here('ms', 'tables', 'modelcomp.csv'), check.names = FALSE)
@@ -619,12 +602,6 @@ kable(msumms$`L-modelsummary`[,-1], longtable = TRUE, booktabs = TRUE, align = '
   add_header_above(c(" " = 1, "Fixed effects" = 2, "Random effects" = 2)) %>% 
   pack_rows(index = c("Conditional model" = sum(msumms$`L-modelsummary`[,1]=="Conditional Model"),
                       "Zero-inflation model" = sum(msumms$`L-modelsummary`[,1]=="Zero-inflation model")))
-
-kable(msumms$`Pc-modelsummary`[,-1], longtable = TRUE, booktabs = TRUE, align = 'lrrrr', 
-      caption = "\\label{tab:Pc}Model summary for Pinus contorta. The conditional model is glmmTMB's genpois (Generalized Poisson) family with dispersion parameter phi² = 68.49936") %>%
-  add_header_above(c(" " = 1, "Fixed effects" = 2, "Random effects" = 2)) %>% 
-  pack_rows(index = c("Conditional model" = sum(msumms$`Pc-modelsummary`[,1]=="Conditional Model"),
-                      "Zero-inflation model" = sum(msumms$`Pc-modelsummary`[,1]=="Zero-inflation model")))
 ```
 
 \newpage
