--- a/reports/modelingData.Rmd
+++ b/reports/modelingData.Rmd
@@ -45,12 +45,12 @@ filter(IV, are > 1.01)
 filter(IV, T4 > 0.5) %>%
   select(species, are, any_of(types$type)) %>% 
   group_split(species)
-IV <- select(IV, -are)
 
 DV <- readRDS(here("output","dependentVar.rds"))
 nrseeds <- length(unique(DV$randomseed))
 nrhgtclasses <- length(unique(DV$hgtclass))
 
+op <- options(pillar.sigfig = 4)
 DV %>% 
   filter(randomseed == 1) %>% 
   group_split(species) %>% 
@@ -58,22 +58,12 @@ DV %>%
   bind_rows() %>% 
   st_drop_geometry() %>% 
   group_by(species) %>% 
-  summarize(per.are = mean(wildlings)) %>% 
-  mutate(per.hectare = per.are * 100) # overall wildlings per hectare
+  summarize(hectares = sum(are)/100,
+            wildlings = sum(wildlings)) %>% 
+  mutate(per.hectare = wildlings/hectares) # overall wildlings per hectare
+options(op)
 
-DV %>% 
-  filter(randomseed == 1) %>% 
-  group_split(species) %>% 
-  map2(group_split(IV, species), ~ add_wildlings(.y,.x)) %>% 
-  map(\(x) mutate(x, area = st_area(x)) %>% 
-        st_drop_geometry()) %>% 
-  map(\(x) select(x, species, wildlings, area)) %>% 
-  map(\(x) summarize(x, species = first(species),
-                     wildlings = sum(wildlings), 
-                     area = sum(area))) %>% 
-  list_rbind() %>% 
-  mutate(area = units::set_units(area, "hectare")) %>% 
-  mutate(density = wildlings/area)
+IV <- select(IV, -are)
 ```
 
 ```{r}
